--- a/templates/me.html
+++ b/templates/me.html
@@ -6,29 +6,8 @@
 
 <script id="appendTo" type="text/html">
     <div class="appendTo">
-        <img src="img/appendTo-logo.png" />
-        <span> - JavaScript Engineer</span>
+        <img src="img/insum_logo_sm.png" />
+        <span> - Senior APEX Consultant</span>
     </div>
 </script>
 
-<script id="verona" type="text/html">
-    <!-- ko if: $parent.points().length < 3 -->
-    <div class="family">
-        <img src="img/map.png" />
-    </div>
-    <!-- /ko -->
-</script>
-
-<script id="family" type="text/html">
-    <!-- ko if: $parent.points().length < 4 -->
-    <div class="family">
-        <img src="img/family.jpg" />
-    </div>
-    <!-- /ko -->
-</script>
-
-<script id="desk" type="text/html">
-    <div class="family">
-        <img src="img/working.jpg" />
-    </div>
-</script>
