Updated to match APEX presentation demos

--- a/templates/end.html
+++ b/templates/end.html
@@ -1,4 +1,5 @@
 <h2 class="center" data-bind="text: title"></h2>
 <div class="intro">
-    <a href="http://knockoutjs.com">KnockoutJS.com</a>
+    <h3 class="center" data-bind="text: speaker"></h3>
+    <!-- <a href="http://knockoutjs.com">KnockoutJS.com</a> -->
 </div>
