--- a/templates/intro.html
+++ b/templates/intro.html
@@ -1,7 +1,7 @@
 <h2 class="center" data-bind="text: title"></h2>
 
 <div class="intro">
-    <a href="http://knockoutjs.com">KnockoutJS.com</a>
+    <a href="http://slides.com/rimblas">slides.com/rimblas</a>
 </div>
 
 <div class="intro speaker">
