--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,9 @@ h2
     margin-bottom: 25px;
     text-shadow: black 1px 1px 2px;
 }
-
+pre {
+    font-size: 1em;
+}
 .center
 {
     text-align: center;
@@ -25,7 +27,7 @@ h2
 
 h2.center
 {
-    font-size: 62px;
+    font-size: 50px;
     line-height: 88px;
     margin-top: 250px;
 }
@@ -96,7 +98,7 @@ h2.title
 
 .cm-s-rubyblue, .cm-s-solarized
 {
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 .cm-s-rubyblue span.cm-keyword 
